qt: release dialog singletons on exit

fix: #25911